[workspace]
members = ["server", "binaries", "preload"]

resolver = "3"

[workspace.lints.clippy]
correctness                    = { level = "warn", priority = -1 }
suspicious                     = { level = "warn", priority = -1 }
complexity                     = { level = "warn", priority = -1 }
perf                           = { level = "warn", priority = -1 }
style                          = { level = "warn", priority = -1 }
pedantic                       = { level = "warn", priority = -1 }
nursery                        = { level = "warn", priority = -1 }
cargo                          = { level = "warn", priority = -1 }
unwrap_used                    = { level = "warn", priority = -1 }
expect_used                    = { level = "warn", priority = -1 }
similar_names                  = { level = "warn", priority = -1 }
cast_precision_loss            = { level = "allow" }
missing_panics_doc             = { level = "allow" }
module_name_repetitions        = { level = "allow" }
missing_errors_doc             = { level = "allow" }
needless_pass_by_value         = { level = "allow" }
enum_glob_use                  = { level = "allow" }
float_cmp                      = { level = "allow" }
iter_without_into_iter         = { level = "allow" }
into_iter_without_iter         = { level = "allow" }
derive_partial_eq_without_eq   = { level = "allow" }
fallible_impl_from             = { level = "allow" }
new_without_default            = { level = "allow" }
manual_range_contains          = { level = "allow" }
module_inception               = { level = "allow" }
cognitive_complexity           = { level = "allow" }
redundant_pub_crate            = { level = "allow" }
cargo_common_metadata          = { level = "allow" }
multiple_crate_versions        = { level = "allow" }
struct_field_names             = { level = "allow" }
struct_excessive_bools         = { level = "allow" }

[workspace.lints.rust]
absolute_paths_not_starting_with_crate        = { level = "warn" }
explicit_outlives_requirements                = { level = "warn" }
ffi_unwind_calls                              = { level = "warn" }
keyword-idents                                = { level = "warn" }
keyword_idents_2018                           = { level = "warn" }
keyword_idents_2024                           = { level = "warn" }
let_underscore_drop                           = { level = "warn" }
macro_use_extern_crate                        = { level = "warn" }
missing_abi                                   = { level = "warn" }
non_ascii_idents                              = { level = "warn" }
non_local_definitions                         = { level = "warn" }
redundant_lifetimes                           = { level = "warn" }
rust_2021_incompatible_closure_captures       = { level = "warn" }
rust_2021_incompatible_or_patterns            = { level = "warn" }
rust_2021_prefixes_incompatible_syntax        = { level = "warn" }
rust_2021_prelude_collisions                  = { level = "warn" }
single_use_lifetimes                          = { level = "warn" }
trivial_casts                                 = { level = "warn" }
trivial_numeric_casts                         = { level = "warn" }
unit_bindings                                 = { level = "warn" }
unreachable_pub                               = { level = "warn" }
unsafe_code                                   = { level = "warn" }
unsafe_op_in_unsafe_fn                        = { level = "warn" }
unstable_features                             = { level = "warn" }
unused_crate_dependencies                     = { level = "warn" }
unused_extern_crates                          = { level = "warn" }
unused_lifetimes                              = { level = "warn" }
unused_macro_rules                            = { level = "warn" }
unused_qualifications                         = { level = "warn" }
variant_size_differences                      = { level = "warn" }

