[package]
name = "preload"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["dylib"]

[[bin]]
name = "test_open"
path = "example/open.rs"

[dependencies]
ctor = "0.6.1"
dashmap = "6.1.0"
libc = { "version" ="0.2.177", features = ["extra_traits"] }
once_cell = "1.21.3"
redhook = "2.0.0"


[lints]
workspace = true
